--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject-AppMainLib.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject-AppMainLib.xcscheme
@@ -1,29 +1,29 @@
 
-<Scheme LastUpgradeVersion="1000" version="1.3">
+<Scheme version="1.3" LastUpgradeVersion="1000">
     <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
         <BuildActionEntries>
-            <BuildActionEntry buildForProfiling="YES" buildForRunning="YES" buildForArchiving="YES" buildForTesting="YES" buildForAnalyzing="YES">
-                <BuildableReference BuildableName="libDummyProject-AppMainLib.a" BuildableIdentifier="primary" BlueprintIdentifier="5F30888E651AE0EE00000000" BlueprintName="DummyProject-AppMainLib" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildActionEntry buildForAnalyzing="YES" buildForRunning="YES" buildForTesting="YES" buildForProfiling="YES" buildForArchiving="YES">
+                <BuildableReference BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableName="libDummyProject-AppMainLib.a" BlueprintName="DummyProject-AppMainLib"></BuildableReference>
             </BuildActionEntry>
         </BuildActionEntries>
     </BuildAction>
-    <TestAction shouldUseLaunchSchemeArgsEnv="YES" buildConfiguration="__TulsiTestRunner_Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB">
+    <TestAction buildConfiguration="__TulsiTestRunner_Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
         <Testables></Testables>
         <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableName="libDummyProject-AppMainLib.a" BlueprintName="DummyProject-AppMainLib" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableIdentifier="primary"></BuildableReference>
+            <BuildableReference BuildableName="libDummyProject-AppMainLib.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BlueprintName="DummyProject-AppMainLib" BuildableIdentifier="primary"></BuildableReference>
         </BuildableProductRunnable>
     </TestAction>
-    <LaunchAction allowLocationSimulation="YES" ignoresPersistentStateOnLaunch="NO" buildConfiguration="Debug" useCustomWorkingDirectory="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" debugServiceExtension="internal" debugDocumentVersioning="YES" launchStyle="0" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB">
+    <LaunchAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" allowLocationSimulation="YES" useCustomWorkingDirectory="NO" buildConfiguration="Debug" debugDocumentVersioning="YES" ignoresPersistentStateOnLaunch="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" launchStyle="0" debugServiceExtension="internal">
         <EnvironmentVariables></EnvironmentVariables>
         <MacroExpansion>
-            <BuildableReference BlueprintName="DummyProject-AppMainLib" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableName="libDummyProject-AppMainLib.a" BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildableReference BuildableName="libDummyProject-AppMainLib.a" BlueprintName="DummyProject-AppMainLib" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableIdentifier="primary"></BuildableReference>
         </MacroExpansion>
     </LaunchAction>
-    <ProfileAction shouldUseLaunchSchemeArgsEnv="YES" debugDocumentVersioning="YES" buildConfiguration="__TulsiTestRunner_Release" useCustomWorkingDirectory="NO">
+    <ProfileAction buildConfiguration="__TulsiTestRunner_Release" debugDocumentVersioning="YES" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO">
         <MacroExpansion>
-            <BuildableReference BuildableIdentifier="primary" BlueprintName="DummyProject-AppMainLib" BuildableName="libDummyProject-AppMainLib.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="5F30888E651AE0EE00000000" BlueprintName="DummyProject-AppMainLib" BuildableName="libDummyProject-AppMainLib.a" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
         </MacroExpansion>
     </ProfileAction>
     <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
-    <ArchiveAction revealArchiveInOrganizer="YES" buildConfiguration="Release"></ArchiveAction>
+    <ArchiveAction buildConfiguration="Release" revealArchiveInOrganizer="YES"></ArchiveAction>
 </Scheme>
