--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject.xcscheme
@@ -1,27 +1,27 @@
 
 <Scheme LastUpgradeVersion="1000" version="1.3">
-    <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
+    <BuildAction buildImplicitDependencies="YES" parallelizeBuildables="YES">
         <BuildActionEntries>
-            <BuildActionEntry buildForProfiling="YES" buildForTesting="YES" buildForRunning="YES" buildForAnalyzing="YES" buildForArchiving="YES">
-                <BuildableReference BuildableName="DummyProject.app" BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="DummyProject"></BuildableReference>
+            <BuildActionEntry buildForArchiving="YES" buildForRunning="YES" buildForAnalyzing="YES" buildForTesting="YES" buildForProfiling="YES">
+                <BuildableReference BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888EA2CFE92000000000" BlueprintName="DummyProject" BuildableName="DummyProject.app"></BuildableReference>
             </BuildActionEntry>
         </BuildActionEntries>
     </BuildAction>
     <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" buildConfiguration="__TulsiTestRunner_Debug" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
         <Testables></Testables>
         <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableIdentifier="primary" BuildableName="DummyProject.app" BlueprintIdentifier="5F30888EA2CFE92000000000" BlueprintName="DummyProject" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildableReference ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="DummyProject" BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" BuildableName="DummyProject.app"></BuildableReference>
         </BuildableProductRunnable>
     </TestAction>
-    <LaunchAction allowLocationSimulation="YES" ignoresPersistentStateOnLaunch="NO" buildConfiguration="Debug" useCustomWorkingDirectory="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" debugServiceExtension="internal" debugDocumentVersioning="YES" launchStyle="0" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB">
+    <LaunchAction selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" launchStyle="0" ignoresPersistentStateOnLaunch="NO" allowLocationSimulation="YES" buildConfiguration="Debug" debugDocumentVersioning="YES" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" debugServiceExtension="internal" useCustomWorkingDirectory="NO">
         <EnvironmentVariables></EnvironmentVariables>
         <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference ReferencedContainer="container:DummyApp.xcodeproj" BuildableIdentifier="primary" BlueprintName="DummyProject" BlueprintIdentifier="5F30888EA2CFE92000000000" BuildableName="DummyProject.app"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" BuildableName="DummyProject.app" BlueprintName="DummyProject" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
         </BuildableProductRunnable>
     </LaunchAction>
-    <ProfileAction debugDocumentVersioning="YES" buildConfiguration="__TulsiTestRunner_Release" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO">
+    <ProfileAction buildConfiguration="__TulsiTestRunner_Release" debugDocumentVersioning="YES" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO">
         <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableName="DummyProject.app" BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" BlueprintName="DummyProject" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintName="DummyProject" BuildableName="DummyProject.app" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888EA2CFE92000000000"></BuildableReference>
         </BuildableProductRunnable>
     </ProfileAction>
     <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
