--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/_idx_Scheme.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/_idx_Scheme.xcscheme
@@ -1,22 +1,22 @@
 
-<Scheme LastUpgradeVersion="1000" version="1.3">
+<Scheme version="1.3" LastUpgradeVersion="1000">
     <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
         <BuildActionEntries>
-            <BuildActionEntry buildForAnalyzing="YES" buildForProfiling="YES" buildForTesting="YES" buildForRunning="YES" buildForArchiving="YES">
-                <BuildableReference BuildableIdentifier="primary" BuildableName="_idx_AppMainLib_A4913054_ios_min10.0.framework" BlueprintName="_idx_AppMainLib_A4913054_ios_min10.0" BlueprintIdentifier="5F30888E10A3536200000000" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildActionEntry buildForRunning="YES" buildForAnalyzing="YES" buildForProfiling="YES" buildForTesting="YES" buildForArchiving="YES">
+                <BuildableReference BlueprintName="_idx_AppMainLib_A4913054_ios_min13.0" BlueprintIdentifier="5F30888E795FC85600000000" ReferencedContainer="container:DummyApp.xcodeproj" BuildableName="_idx_AppMainLib_A4913054_ios_min13.0.framework" BuildableIdentifier="primary"></BuildableReference>
             </BuildActionEntry>
-            <BuildActionEntry buildForProfiling="YES" buildForRunning="YES" buildForArchiving="YES" buildForAnalyzing="YES" buildForTesting="YES">
-                <BuildableReference BuildableName="_idx_AppMainLib_A4913054_ios_min13.0.framework" BuildableIdentifier="primary" BlueprintIdentifier="5F30888E795FC85600000000" BlueprintName="_idx_AppMainLib_A4913054_ios_min13.0" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildActionEntry buildForTesting="YES" buildForArchiving="YES" buildForProfiling="YES" buildForRunning="YES" buildForAnalyzing="YES">
+                <BuildableReference ReferencedContainer="container:DummyApp.xcodeproj" BuildableName="_idx_AppMainLib_A4913054_ios_min10.0.framework" BlueprintName="_idx_AppMainLib_A4913054_ios_min10.0" BlueprintIdentifier="5F30888E10A3536200000000" BuildableIdentifier="primary"></BuildableReference>
             </BuildActionEntry>
         </BuildActionEntries>
     </BuildAction>
-    <TestAction selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES" buildConfiguration="Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB">
+    <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" buildConfiguration="Debug" shouldUseLaunchSchemeArgsEnv="YES" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB">
         <Testables></Testables>
     </TestAction>
-    <LaunchAction allowLocationSimulation="YES" ignoresPersistentStateOnLaunch="NO" buildConfiguration="Debug" useCustomWorkingDirectory="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" debugServiceExtension="internal" debugDocumentVersioning="YES" launchStyle="0" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB">
+    <LaunchAction allowLocationSimulation="YES" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" buildConfiguration="Debug" useCustomWorkingDirectory="NO" debugServiceExtension="internal" ignoresPersistentStateOnLaunch="NO" debugDocumentVersioning="YES" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" launchStyle="0">
         <EnvironmentVariables></EnvironmentVariables>
     </LaunchAction>
-    <ProfileAction debugDocumentVersioning="YES" buildConfiguration="Release" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO"></ProfileAction>
+    <ProfileAction shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO" buildConfiguration="Release" debugDocumentVersioning="YES"></ProfileAction>
     <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
-    <ArchiveAction revealArchiveInOrganizer="YES" buildConfiguration="Release"></ArchiveAction>
+    <ArchiveAction buildConfiguration="Release" revealArchiveInOrganizer="YES"></ArchiveAction>
 </Scheme>
