--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/AppMainLib.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/AppMainLib.xcscheme
@@ -14,16 +14,16 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DF51CA0FFD4BFDF200000000"
-               BuildableName = "_idx_AppMainLib_B5E1E896_ios_min10.0.framework"
-               BlueprintName = "_idx_AppMainLib_B5E1E896_ios_min10.0"
+               BlueprintIdentifier = "DF51CA0FE0999FE400000000"
+               BuildableName = "libAppMainLib.a"
+               BlueprintName = "AppMainLib"
                ReferencedContainer = "container:DummyApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "__TulsiTestRunner_Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -40,13 +40,31 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0FE0999FE400000000"
+            BuildableName = "libAppMainLib.a"
+            BlueprintName = "AppMainLib"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "__TulsiTestRunner_Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0FE0999FE400000000"
+            BuildableName = "libAppMainLib.a"
+            BlueprintName = "AppMainLib"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
