--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject-AppMainLib.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject-AppMainLib.xcscheme
@@ -1,29 +1,76 @@
-
-<Scheme version="1.3" LastUpgradeVersion="1000">
-    <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
-        <BuildActionEntries>
-            <BuildActionEntry buildForAnalyzing="YES" buildForRunning="YES" buildForTesting="YES" buildForProfiling="YES" buildForArchiving="YES">
-                <BuildableReference BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableName="libDummyProject-AppMainLib.a" BlueprintName="DummyProject-AppMainLib"></BuildableReference>
-            </BuildActionEntry>
-        </BuildActionEntries>
-    </BuildAction>
-    <TestAction buildConfiguration="__TulsiTestRunner_Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
-        <Testables></Testables>
-        <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableName="libDummyProject-AppMainLib.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BlueprintName="DummyProject-AppMainLib" BuildableIdentifier="primary"></BuildableReference>
-        </BuildableProductRunnable>
-    </TestAction>
-    <LaunchAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" allowLocationSimulation="YES" useCustomWorkingDirectory="NO" buildConfiguration="Debug" debugDocumentVersioning="YES" ignoresPersistentStateOnLaunch="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" launchStyle="0" debugServiceExtension="internal">
-        <EnvironmentVariables></EnvironmentVariables>
-        <MacroExpansion>
-            <BuildableReference BuildableName="libDummyProject-AppMainLib.a" BlueprintName="DummyProject-AppMainLib" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888E651AE0EE00000000" BuildableIdentifier="primary"></BuildableReference>
-        </MacroExpansion>
-    </LaunchAction>
-    <ProfileAction buildConfiguration="__TulsiTestRunner_Release" debugDocumentVersioning="YES" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO">
-        <MacroExpansion>
-            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="5F30888E651AE0EE00000000" BlueprintName="DummyProject-AppMainLib" BuildableName="libDummyProject-AppMainLib.a" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
-        </MacroExpansion>
-    </ProfileAction>
-    <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
-    <ArchiveAction buildConfiguration="Release" revealArchiveInOrganizer="YES"></ArchiveAction>
+<?xml version="1.0" encoding="UTF-8"?>
+<Scheme
+   LastUpgradeVersion = "1000"
+   version = "1.3">
+   <BuildAction
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DF51CA0F0E344BE400000000"
+               BuildableName = "libDummyProject-AppMainLib.a"
+               BlueprintName = "DummyProject-AppMainLib"
+               ReferencedContainer = "container:DummyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
+   </BuildAction>
+   <TestAction
+      buildConfiguration = "__TulsiTestRunner_Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <Testables>
+      </Testables>
+   </TestAction>
+   <LaunchAction
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      launchStyle = "0"
+      useCustomWorkingDirectory = "NO"
+      ignoresPersistentStateOnLaunch = "NO"
+      debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
+      allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0F0E344BE400000000"
+            BuildableName = "libDummyProject-AppMainLib.a"
+            BlueprintName = "DummyProject-AppMainLib"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+   </LaunchAction>
+   <ProfileAction
+      buildConfiguration = "__TulsiTestRunner_Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      savedToolIdentifier = ""
+      useCustomWorkingDirectory = "NO"
+      debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0F0E344BE400000000"
+            BuildableName = "libDummyProject-AppMainLib.a"
+            BlueprintName = "DummyProject-AppMainLib"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+   </ProfileAction>
+   <AnalyzeAction
+      buildConfiguration = "Debug">
+   </AnalyzeAction>
+   <ArchiveAction
+      buildConfiguration = "Release"
+      revealArchiveInOrganizer = "YES">
+   </ArchiveAction>
 </Scheme>
