--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/DummyProject.xcscheme
@@ -1,29 +1,78 @@
-
-<Scheme LastUpgradeVersion="1000" version="1.3">
-    <BuildAction buildImplicitDependencies="YES" parallelizeBuildables="YES">
-        <BuildActionEntries>
-            <BuildActionEntry buildForArchiving="YES" buildForRunning="YES" buildForAnalyzing="YES" buildForTesting="YES" buildForProfiling="YES">
-                <BuildableReference BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888EA2CFE92000000000" BlueprintName="DummyProject" BuildableName="DummyProject.app"></BuildableReference>
-            </BuildActionEntry>
-        </BuildActionEntries>
-    </BuildAction>
-    <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" buildConfiguration="__TulsiTestRunner_Debug" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
-        <Testables></Testables>
-        <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="DummyProject" BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" BuildableName="DummyProject.app"></BuildableReference>
-        </BuildableProductRunnable>
-    </TestAction>
-    <LaunchAction selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" launchStyle="0" ignoresPersistentStateOnLaunch="NO" allowLocationSimulation="YES" buildConfiguration="Debug" debugDocumentVersioning="YES" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" debugServiceExtension="internal" useCustomWorkingDirectory="NO">
-        <EnvironmentVariables></EnvironmentVariables>
-        <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="5F30888EA2CFE92000000000" BuildableName="DummyProject.app" BlueprintName="DummyProject" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
-        </BuildableProductRunnable>
-    </LaunchAction>
-    <ProfileAction buildConfiguration="__TulsiTestRunner_Release" debugDocumentVersioning="YES" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO">
-        <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BuildableIdentifier="primary" BlueprintName="DummyProject" BuildableName="DummyProject.app" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="5F30888EA2CFE92000000000"></BuildableReference>
-        </BuildableProductRunnable>
-    </ProfileAction>
-    <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
-    <ArchiveAction revealArchiveInOrganizer="YES" buildConfiguration="Release"></ArchiveAction>
+<?xml version="1.0" encoding="UTF-8"?>
+<Scheme
+   LastUpgradeVersion = "1000"
+   version = "1.3">
+   <BuildAction
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DF51CA0FCEA0E47200000000"
+               BuildableName = "DummyProject.app"
+               BlueprintName = "DummyProject"
+               ReferencedContainer = "container:DummyApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
+   </BuildAction>
+   <TestAction
+      buildConfiguration = "__TulsiTestRunner_Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <Testables>
+      </Testables>
+   </TestAction>
+   <LaunchAction
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      launchStyle = "0"
+      useCustomWorkingDirectory = "NO"
+      ignoresPersistentStateOnLaunch = "NO"
+      debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
+      allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0FCEA0E47200000000"
+            BuildableName = "DummyProject.app"
+            BlueprintName = "DummyProject"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+   </LaunchAction>
+   <ProfileAction
+      buildConfiguration = "__TulsiTestRunner_Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      savedToolIdentifier = ""
+      useCustomWorkingDirectory = "NO"
+      debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DF51CA0FCEA0E47200000000"
+            BuildableName = "DummyProject.app"
+            BlueprintName = "DummyProject"
+            ReferencedContainer = "container:DummyApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+   </ProfileAction>
+   <AnalyzeAction
+      buildConfiguration = "Debug">
+   </AnalyzeAction>
+   <ArchiveAction
+      buildConfiguration = "Release"
+      revealArchiveInOrganizer = "YES">
+   </ArchiveAction>
 </Scheme>
