--- a/DummyProject/BUILD
+++ b/DummyProject/BUILD
@@ -22,3 +22,30 @@ ios_application(
     visibility = ["//visibility:public"],
     deps = [":AppMainLib"],
 )
+
+
+# Copy from Tailor
+
+load(
+    "@xchammer_resources//:xchammerconfig.bzl",
+    "project_config",
+)
+
+load("@xchammer_resources//:xcodeproject.bzl", "xcode_project")
+xcode_project(
+    name = "XcodeBazel",
+    targets = [
+	"//:DummyProject",
+    ],
+    bazel = "tools/bazelwrapper",
+    xchammer = "tools/xchammer.app",
+    project_config = project_config(
+	build_bazel_platform_options = {
+            "ios_x86_64": ["--config=ios_x86_64"],
+            "ios_i386": ["--config=ios_i386"],
+        },
+	paths = ["**"],
+	generate_xcode_schemes = True,
+	generate_transitive_xcode_targets = True,
+    ),
+)
