--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/Kumon.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/Kumon.xcscheme
@@ -1,27 +1,27 @@
 
-<Scheme version="1.3" LastUpgradeVersion="1000">
+<Scheme LastUpgradeVersion="1000" version="1.3">
     <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
         <BuildActionEntries>
-            <BuildActionEntry buildForRunning="YES" buildForArchiving="YES" buildForProfiling="YES" buildForAnalyzing="YES" buildForTesting="YES">
-                <BuildableReference BlueprintName="Kumon" BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BuildableName="libKumon.a" BlueprintIdentifier="B265BD64EE4DCFA000000000"></BuildableReference>
+            <BuildActionEntry buildForArchiving="YES" buildForAnalyzing="YES" buildForTesting="YES" buildForRunning="YES" buildForProfiling="YES">
+                <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="1C0BA11E388C172200000000" BuildableName="libKumon.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="Kumon"></BuildableReference>
             </BuildActionEntry>
         </BuildActionEntries>
     </BuildAction>
-    <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" shouldUseLaunchSchemeArgsEnv="YES" buildConfiguration="__TulsiTestRunner_Debug" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB">
+    <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" buildConfiguration="__TulsiTestRunner_Debug" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" shouldUseLaunchSchemeArgsEnv="YES">
         <Testables></Testables>
         <BuildableProductRunnable runnableDebuggingMode="0">
-            <BuildableReference BlueprintIdentifier="B265BD64EE4DCFA000000000" BuildableName="libKumon.a" ReferencedContainer="container:DummyApp.xcodeproj" BuildableIdentifier="primary" BlueprintName="Kumon"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="1C0BA11E388C172200000000" BuildableName="libKumon.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="Kumon"></BuildableReference>
         </BuildableProductRunnable>
     </TestAction>
-    <LaunchAction buildConfiguration="Debug" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" debugDocumentVersioning="YES" allowLocationSimulation="YES" launchStyle="0" debugServiceExtension="internal" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" useCustomWorkingDirectory="NO" ignoresPersistentStateOnLaunch="NO">
+    <LaunchAction debugServiceExtension="internal" buildConfiguration="Debug" launchStyle="0" allowLocationSimulation="YES" ignoresPersistentStateOnLaunch="NO" debugDocumentVersioning="YES" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" useCustomWorkingDirectory="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB">
         <EnvironmentVariables></EnvironmentVariables>
         <MacroExpansion>
-            <BuildableReference BuildableIdentifier="primary" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="B265BD64EE4DCFA000000000" BuildableName="libKumon.a" BlueprintName="Kumon"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="1C0BA11E388C172200000000" BlueprintName="Kumon" ReferencedContainer="container:DummyApp.xcodeproj" BuildableName="libKumon.a"></BuildableReference>
         </MacroExpansion>
     </LaunchAction>
-    <ProfileAction useCustomWorkingDirectory="NO" buildConfiguration="__TulsiTestRunner_Release" shouldUseLaunchSchemeArgsEnv="YES" debugDocumentVersioning="YES">
+    <ProfileAction debugDocumentVersioning="YES" useCustomWorkingDirectory="NO" buildConfiguration="__TulsiTestRunner_Release" shouldUseLaunchSchemeArgsEnv="YES">
         <MacroExpansion>
-            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="B265BD64EE4DCFA000000000" BlueprintName="Kumon" BuildableName="libKumon.a" ReferencedContainer="container:DummyApp.xcodeproj"></BuildableReference>
+            <BuildableReference BuildableIdentifier="primary" BlueprintIdentifier="1C0BA11E388C172200000000" BuildableName="libKumon.a" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintName="Kumon"></BuildableReference>
         </MacroExpansion>
     </ProfileAction>
     <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
