--- a/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/_idx_Scheme.xcscheme
+++ b/GeneratedByTulsi/DummyApp.xcodeproj/xcshareddata/xcschemes/_idx_Scheme.xcscheme
@@ -1,22 +1,22 @@
 
-<Scheme version="1.3" LastUpgradeVersion="1000">
-    <BuildAction buildImplicitDependencies="YES" parallelizeBuildables="YES">
+<Scheme LastUpgradeVersion="1000" version="1.3">
+    <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
         <BuildActionEntries>
-            <BuildActionEntry buildForTesting="YES" buildForProfiling="YES" buildForAnalyzing="YES" buildForRunning="YES" buildForArchiving="YES">
-                <BuildableReference BlueprintName="_idx_AppMainLib_9E1A62C2_ios_min10.0" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="B265BD640BA2123200000000" BuildableName="_idx_AppMainLib_9E1A62C2_ios_min10.0.framework" BuildableIdentifier="primary"></BuildableReference>
+            <BuildActionEntry buildForAnalyzing="YES" buildForRunning="YES" buildForTesting="YES" buildForArchiving="YES" buildForProfiling="YES">
+                <BuildableReference BlueprintName="_idx_AppMainLib_F700E47F_ios_min10.0" BuildableIdentifier="primary" BlueprintIdentifier="1C0BA11EABCA8D6600000000" ReferencedContainer="container:DummyApp.xcodeproj" BuildableName="_idx_AppMainLib_F700E47F_ios_min10.0.framework"></BuildableReference>
             </BuildActionEntry>
-            <BuildActionEntry buildForRunning="YES" buildForAnalyzing="YES" buildForProfiling="YES" buildForArchiving="YES" buildForTesting="YES">
-                <BuildableReference BuildableName="_idx_Kumon_38891ACF_ios_min10.0.framework" BlueprintIdentifier="B265BD6483B45D3800000000" BlueprintName="_idx_Kumon_38891ACF_ios_min10.0" ReferencedContainer="container:DummyApp.xcodeproj" BuildableIdentifier="primary"></BuildableReference>
+            <BuildActionEntry buildForTesting="YES" buildForAnalyzing="YES" buildForArchiving="YES" buildForRunning="YES" buildForProfiling="YES">
+                <BuildableReference BlueprintName="_idx_Kumon_D62D8100_ios_min10.0" BuildableIdentifier="primary" BuildableName="_idx_Kumon_D62D8100_ios_min10.0.framework" ReferencedContainer="container:DummyApp.xcodeproj" BlueprintIdentifier="1C0BA11E65810EFC00000000"></BuildableReference>
             </BuildActionEntry>
         </BuildActionEntries>
     </BuildAction>
-    <TestAction buildConfiguration="Debug" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" shouldUseLaunchSchemeArgsEnv="YES" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB">
+    <TestAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" buildConfiguration="Debug" shouldUseLaunchSchemeArgsEnv="YES">
         <Testables></Testables>
     </TestAction>
-    <LaunchAction selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB" debugDocumentVersioning="YES" useCustomWorkingDirectory="NO" allowLocationSimulation="YES" ignoresPersistentStateOnLaunch="NO" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" debugServiceExtension="internal" launchStyle="0" buildConfiguration="Debug">
+    <LaunchAction buildConfiguration="Debug" launchStyle="0" selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB" useCustomWorkingDirectory="NO" ignoresPersistentStateOnLaunch="NO" allowLocationSimulation="YES" debugDocumentVersioning="YES" debugServiceExtension="internal" selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB">
         <EnvironmentVariables></EnvironmentVariables>
     </LaunchAction>
-    <ProfileAction shouldUseLaunchSchemeArgsEnv="YES" debugDocumentVersioning="YES" buildConfiguration="Release" useCustomWorkingDirectory="NO"></ProfileAction>
+    <ProfileAction debugDocumentVersioning="YES" buildConfiguration="Release" shouldUseLaunchSchemeArgsEnv="YES" useCustomWorkingDirectory="NO"></ProfileAction>
     <AnalyzeAction buildConfiguration="Debug"></AnalyzeAction>
     <ArchiveAction buildConfiguration="Release" revealArchiveInOrganizer="YES"></ArchiveAction>
 </Scheme>
